changes to gitignore

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,17 +19,18 @@
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <EditText
         android:id="@+id/todoTextForm"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="top"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="@+id/titleTextForm"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/titleTextForm"
         app:layout_constraintTop_toBottomOf="@+id/titleTextForm" />
 
@@ -40,7 +41,7 @@
         android:onClick="saveData"
         android:text="@string/save"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/scrollList"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/deleteButton"
         app:layout_constraintTop_toBottomOf="@+id/scrollList" />
 
